[workspace]
members = ["crates/codex1", "crates/codex1-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
fs2 = "0.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
toml = "0.8"
uuid = { version = "1.8", features = ["serde", "v4"] }
walkdir = "2.5"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
