[workspace]
members = ["crates/codex1"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/joel-nilsson/codex1"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
match_same_arms = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
unused_self = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
items_after_statements = "allow"
wildcard_imports = "allow"
unnecessary_wraps = "allow"
let_underscore_untyped = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
