[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex1"
version = "0.1.0"
description = "Deterministic CLI substrate for Codex1 missions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex1 = "codex1.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
