[package]
name = "codex1-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
fs2.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
uuid.workspace = true
walkdir.workspace = true

[lints]
workspace = true
