[package]
name = "codex1"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex1_v2"
path = "src/lib.rs"

[[bin]]
name = "codex1"
path = "src/bin/codex1.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fs2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }

[lints]
workspace = true
