[package]
name = "codex1"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
time.workspace = true
toml.workspace = true
uuid.workspace = true
walkdir.workspace = true
codex1-core = { path = "../codex1-core" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[lints]
workspace = true
