[package]
name = "codex1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Skills-first native Codex workflow harness (mission CLI)."

[lints]
workspace = true

[[bin]]
name = "codex1"
path = "src/bin/codex1.rs"

[lib]
name = "codex1"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
